# LogCo

./: .gitattributes  .gitignore  Paper.md  Preprocess.py  README.md  correct.py  novel.txt  pyproject.toml  requirements.txt  suggest.md  template_label_conflict_report.md
script/: Down.sh
src/: evaluate_cascade.py
src/LLMs/: config.py  evaluate_retriever.py  llm_client.py  main.py  prompt_templates.py  rule_store.py  summarize_system_instruction.py  vector_store.py
src/LLMs/rules/: BGL.jsonl  Spirit.jsonl
src/SM/: IncrementalFinetune.py  Inference.py  LogDataset.py  Model.py  Train.py  UncertaintyAnalysis.py  config.py  validate_split_ood.py
utils/: base.py
